-document stringification with overloaded ""
-change in behavior: all query scanning functions now treat '&' and ';' as
 valid separators
-change in behavior: explicitly specifying a separator in a query setter
 replaces existing separators in the query
-new aliases: url_encode, url_decode (credit: bluefeet)
-new module: URI::Fast::Test to make unit testing with Test2 easier (credit: merlyn)
-bugfix: set_query, set_fragment, set_path unnecessarily encode permitted characters

0.34 2018-06-13
-bugfix: set_param could clobber existing query parameters (credit: aeruder)

0.33 2018-06-13
-new method add_param() appends query parameters without clobbering existing
 query keys (credit: sara)

0.32 2018-06-12
-alias as_string -> to_string (credit: merlyn)

0.31 2018-06-12
-@EXPORT_OK now includes encode() and decode() (credit: merlyn)

0.30 2018-06-12
-incompatible change: dropped default scheme; when no scheme is present in
 the source string, the stringified URI is excluded
-dropped prototype from URI::Fast::uri()

0.29 2018-06-07
-optimization: uri() now sets default scheme to "file" in XS
-docs updated to clarify the unclear (credit: val, merlyn)
-incompatible change: param() croaks when called in scalar context but
 encounters multiple parameter values (credit: merlyn)

0.28 2018-05-30
-bugfix: segfault when c function uri_decode called with len=0 and an input
 string with length > 0

0.27 2018-05-26
-declare POD encoding

0.26 2018-05-25
-switch from Dist::Zilla and Inline::C to vanilla XS and ExtUtils::MakeMaker to
 simplify building binary distributions
-support for interpreter threads
-remove separate URI::Fast::IRI module as Dist::Zilla's POD generator is no
 longer used

0.25 (failed)
-failed due to version conflict in URI::Fast::IRI, which has no version

0.24 2018-05-23
-bugfix: move URI::Fast::IRI to its own file to unconfuse Dist::Zilla when generating docs

0.23 2018-04-26
-support for IRIs via new constructor, iri()
-documented uri_split()
